tests/diag/package-chain.id
use tests/pkg/nope-not-real
1
